Commands and permissions refactor